@@ -1,0 +1,3 @@
+stationaryGroundwaterFoam.C  
+
+EXE = $(FOAM_USER_APPBIN)/stationaryGroundwaterFoam
