@@ -1,0 +1,65 @@
+/*--------------------------------*- C++ -*----------------------------------*\
+| =========                 |                                                 |
+| \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox           |
+|  \\    /   O peration     | Version:  6                                     |
+|   \\  /    A nd           | Web:      www.OpenFOAM.com                      |
+|    \\/     M anipulation  |                                                 |
+\*---------------------------------------------------------------------------*/
+FoamFile
+{
+    version     2.0;
+    format      ascii;
+    class       dictionary;
+    object      blockMeshDict;
+}
+// * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
+
+convertToMeters 1;
+
+vertices        
+(
+    (0 0 0)
+    (0.1 0 0)
+    (0.1 10 0)
+    (0 10 0)
+    (0 0 0.1)
+    (0.1 0 0.1)
+    (0.1 10 0.1)
+    (0 10 0.1)
+);
+
+blocks          
+(
+    hex (0 1 2 3 4 5 6 7) (1 500 1) simpleGrading (1 1 1)
+);
+
+edges           
+(
+);
+
+patches         
+(
+    patch inlet 
+    (
+        (3 7 6 2)
+    )
+
+    patch outlet 
+    (
+        (1 5 4 0)
+    )
+
+    empty frontAndBack 
+    (
+	(0 4 7 3)
+        (0 3 2 1)
+	(2 6 5 1)
+        (4 5 6 7)
+    )
+);
+
+mergePatchPairs 
+(
+);
+
+// ************************************************************************* //
